Thu May 13 18:37:52 2004  Steve Huston  <shuston@riverace.com>

	* examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Added missing
	  #include "ace/Service_Object.h" for the non-AIO case.

Thu May 13 21:39:00 2004-05-13  Marek Brudka  <mbrudka@elka.pw.edu.pl>

	* bin/MakeProjectCreator/templates/gnu.mpd: Changed dependency file 
	name to make file names shorter. Thanks to Chad Elliott 
	<elliott_c@ociweb.com> for a patch.

Thu May 13 21:39:00 2004-05-13  Marek Brudka  <mbrudka@elka.pw.edu.pl>

	* docs/ACE-guidelines.html: added guideline about lonmg file names

Thu May 13 18:57:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_LD_SEARCH_PATH defined as PATH. Because Cygwin runs on
          Windows we must use PATH and not LD_LIBRARY_PATH which is the
          default in ACE

Thu May 13 15:59:31 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_HAS_SNPRINTF. Cygwin supports this

Thu May 13 15:28:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_LACKS_MUTEXATTR_PSHARED, Cygwin export this function but
          it doesn't work at this moment.

Thu May 13 07:24:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cache_Map_Manager_T.{h,cpp,i}:
        * ace/Cached_Connect_Strategy_T.cpp:
        * ace/Hash_Cache_Map_Manager_T.h:
        * tests/Cached_Accept_Conn_Test.{h,cpp}:
        * tests/Cached_Conn_Test.cpp:
        * ace/README:
        * examples/Web_Crawler/URL_Visitor.cpp:
          Removed ACE_HAS_BROKEN_EXTENDED_TEMPLATES. This was for a bug in pre
          GCC 2.8 compilers which we don't support anymore.

        * ace/config-openvms.h:
          Cleanup

Wed May 12 21:26:37 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* performance-tests/Server_Concurrency/Leader_Follower/leader_follower.cpp: