@@ -1,3 +1,10 @@
+Thu May 13 20:23:12 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* performance-tests/Synch-Benchmarks/Perf_Test/Performance_Test.h:
+
+	  Added missing "ace/svc_export.h" include.  Fixes compile-time
+	  errors in multithread-enabled builds.
+
 Thu May 13 18:37:52 2004  Steve Huston  <shuston@riverace.com>
 
 	* examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Added missing
